...
                    WakeLockSwitch()
                    Heading(R.string.themeTitle)
                    ThemeChoice()
                    WideButton(R.string.ViewChangelog, ButtonStyle.Outlined, "changelogButton", Modifier.padding(top = 24.dp)) {
                        activity.showChangelog()
                    }
                    WideButton(LibKotlinR.string.privacy_title, ButtonStyle.Filled, "privacyChoicesButton", Modifier.padding(top = 16.dp)) {
                        TelemetryConsent.show(activity)
                    }
                    PrivateBuildDiagnostics(activity)
                }
            }
        }
...
}

@Composable
private fun WideButton(
    text: Int,
    style: ButtonStyle,
    tag: String,
    modifier: Modifier = Modifier,
    enabled: Boolean = true,
    onClick: () -> Unit,
) {
    TagMasterButton(
        stringResource(text),
...
